fixed the overflow

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 
 .heroBanner {
   height: 70vh;
-  width: 100vw;
   background-image: url("Asests/mustang1.jpg");
 }
 
